--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:gravity="bottom"
     android:orientation="vertical"
     android:id="@+id/linearlayoutQuoteListActivityV"
-    android:background="@color/black"
+    android:background="@color/black2"
     android:textColor="@color/white"
 >
     <ListView
@@ -22,12 +22,14 @@
     >
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
             android:id="@+id/etQuoteListActivity"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:layout_weight="1"
             android:hint="@string/write_a_quote"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/black"
+            android:background="@color/white"
+            android:paddingStart="5dp"
         />
         <Button
             android:id="@+id/btnQuoteListActivity"
